Fix popup close button not visible on mobile

--- a/src/scss/_partials/_popup.scss
+++ b/src/scss/_partials/_popup.scss
@@ -297,7 +297,7 @@ body {
             position: absolute;
             top: 10px;
             right: 10px;
-            z-index: 1;
+            z-index: 10;
         }
 
         .crt-previous,
